style(ui): redesign layouts with Material Design - activity_main: add paddingTop for RecyclerView - item_task: use CardView, minHeight, and cool color palette - activity_add_task: redesign form with TextInputLayout and MaterialButton - colors: add fab_blue, task_card_bg, task_title, task_deadline

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,15 @@
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:paddingTop="40dp"
+        android:paddingBottom="16dp"
+        android:clipToPadding="false"
         android:contentDescription="@string/task_list"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
 
     <!-- FloatingActionButton to add new task  -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -21,7 +25,8 @@
         android:layout_height="wrap_content"
         android:src="@android:drawable/ic_input_add"
         android:contentDescription="@string/add_new_task"
-        app:backgroundTint="@color/purple_500"
+        app:backgroundTint="@color/fab_blue"
+        app:tint="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="16dp" />
