--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -58,7 +58,9 @@
             android:id="@+id/et_deadline"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Deadline (yyyy-mm-dd)" />
+            android:hint="Select deadline"
+            android:focusable="false"
+            android:clickable="true"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <!-- Save Button -->
